2020-04-08  Jose E. Marchesi  <jemarch@gnu.org>

	* src/Makefile.am (poke_CFLAGS): Remove LIBNBD_CFLAGS.
	(poke_LDADD): Remove LIBNBD_LIBS.
	* lib/Makefile.am (libpoke_la_CFLAGS): Add LIBNBD_CFLAGS.
	(libpoke_la_LIBADD): Add LIBNBD_LIBS.

2020-04-08  Jose E. Marchesi  <jemarch@gnu.org>

	* lib/pvm-program.c: Remove trailing whitespaces.

2020-04-08  Tim Rühsen  <tim.ruehsen@gmx.de>

	* src/pk-cmd.c (pk_cmd_get_next_match): Fix endless loop
	introduced in commit c576c04c3.

2020-04-07  Jose E. Marchesi  <jemarch@gnu.org>

	* The big lib-ization.

2020-04-06  Jose E. Marchesi  <jemarch@gnu.org>

	* run.in (POKEDATADIR): Point to lib.
	* src/Makefile.am (poke_LDADD): Link with libpoke.
	* configure.ac: Add lib/Makefile to AC_CONFIG_FILES.
	* Makefile.am (SUBDIRS): Add lib.

2020-04-07  Tim Rühsen  <tim.ruehsen@gmx.de>

	* src/pkl-fold.c (OP_BINARY_SSS): Use pk_str_concat instead of
	strlen/xmalloc/strcpy/strcat.
	* src/pkl.c (pkl_new): Likewise.

2020-04-06  Tim Rühsen  <tim.ruehsen@gmx.de>

	* src/poke.c (initialize): Use pk_str_concat instead of
	strlen/xmalloc/strcpy/strcat.
	(initialize_user): Likewise.

2020-04-06  Tim Rühsen  <tim.ruehsen@gmx.de>

	* bootstrap.conf: Add gnulib module stdarg.
	* src/pk-utils.h: Declaration of pk_str_concat.
	* src/pk-utils.c: Implementation of pk_str_concat.

2020-04-06  Tim Rühsen  <tim.ruehsen@gmx.de>

	* src/pkl-tab.y (load_module): Fix check for empty string.
	* src/poke.c (initialize_user): Likewise.

2020-04-06  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pvm-val.c (pvm_print_val_1): Update to new interface.
	(pvm_print_val): Use new pvm_print_val_1 interface.
	(pvm_print_val_with_params): New function.
	Do not include poke.h
	(pvm_call_pretty_printer): Get a vm argument and use it instead of
	poke_vm.
	* src/pvm.h (PVM_PRINT_F_PPRINT): Define.
	(PVM_PRINT_F_GET_PPRINT): Likewise.
	(pvm_print_val): Moved from pvm-val.h
	(pvm_obase): New function.
	(pvm_set_obase): Likewise.
	* src/pvm.c (pvm_init): Initialize PVM_STATE_VM.